fix multiple version compile errors